# mcp-with-multiple-servers

./: .gitignore  README.md  app.py  client.py  gmail_config.json  mcp_config.json  mongo_client.py  package-lock.json  pyproject.toml  requirements.txt  server.py  tokengen.py
gcalendar/: gcalendar_helper.py  gcalendar_server.py
mongodb/: mongo_client.py
