[project]
name = "mcp-server-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "httpx>=0.28.1",
    "langchain-groq>=0.3.2",
    "mcp-use>=1.2.13",
    "mcp[cli]>=1.9.0",
    "nest-asyncio>=1.6.0",
]
